Fix background to stretch and eliminate white space

--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
-body{
+html, body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: beige;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 100%;
     overflow-x: hidden;
+    background-image: url("img/bg.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .container{
-    background-image: url("img/bg.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
     min-height: 100vh;
     width: 100vw;
 }
